--- a/experience.html
+++ b/experience.html
@@ -31,7 +31,7 @@
             <li><strong> Lead UX Designer,</strong> Merkle • 2021 - Present</li>
             <li><strong>Senior UX Designer</strong>, Neudesic • 2018 - 2021</li>
             <li><strong>Front-End Developer</strong> The Spark Group • 2017 - 2018</li>
-            <li><strong>Developer & Founder,</strong> SqrDesigns • 2016 - Present</li>
+            <li><strong>Developer &amp; Founder,</strong> SqrDesigns • 2016 - Present</li>
         </ul> 
       </section> 
 
