--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
     <header>
         <img src="images/code.png" alt="code icon" class="experience-image">
         <h1 class="tag name">Experience</h1>
-        <p class="tag description">A blend of design & code</p>
+        <p class="tag description">A blend of design &amp; code</p>
       </header>
 
     <main class="flex">
