--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <img src="images/me.png" alt="Photo of Melissa Ketch" class="profile-image">
       <h1 class="tag name">Hello, I’m Mel</h1>
-      <p class="tag description">UX Designer & Front-End Developer</p>
+      <p class="tag description">UX Designer &amp; Front-End Developer</p>
     </header>
 
     <main class="flex">
